# lmgb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
include/: cpu.h  defs.h  enums.h  graphics.h  input.h  interrupts.h  lmgb.h  mbc.h  mbc1.h  mbc_nombc.h  mem.h  renderer.h  shaders.hpp  synchronizer.h  timer.h
include/glad/: glad.h
shaders/: fragment.fs  vertex.vs
src/: cpu.cpp  cpu.h  glad.c  graphics.cpp  input.cpp  interrupts.cpp  lmgb.cpp  lmgb.h  mbc.cpp  mbc1.cpp  mem.cpp  renderer.cpp  shaders.cpp  synchronizer.cpp  test.cpp  timer.cpp
src/cpu/: cpu.cpp  cpu.h
src/interrupts/: interrupts.cpp  interrupts.h
src/mbc/: mbc.h
src/mem/: mem.cpp  mem.h
